--- a/BaseCleanAPI.Application/ERP.Application.csproj
+++ b/BaseCleanAPI.Application/ERP.Application.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.35.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
@@ -15,5 +16,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BaseCleanAPI.Domain\ERP.Domain.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Features\Users\Handlers\" />
+    <Folder Include="Features\Users\Queries\" />
   </ItemGroup>
 </Project>
