--- a/BaseCleanAPI.Domain/ERP.Domain.csproj
+++ b/BaseCleanAPI.Domain/ERP.Domain.csproj
@@ -7,4 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.3" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Events\" />
+    <Folder Include="AggregateRoots\" />
+    <Folder Include="Enums\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Specifications\" />
+    <Folder Include="ValueObjects\" />
+  </ItemGroup>
 </Project>
