--- a/BaseCleanAPI.Infrastructure/ERP.Infrastructure.csproj
+++ b/BaseCleanAPI.Infrastructure/ERP.Infrastructure.csproj
@@ -30,6 +30,7 @@
     <Folder Include="Email\" />
     <Folder Include="Caching\" />
     <Folder Include="Logging\" />
+    <Folder Include="Persistence\Seed\" />
     <Folder Include="SMS\" />
   </ItemGroup>
 </Project>
