--- a/BaseCleanAPI.Presentation/appsettings.json
+++ b/BaseCleanAPI.Presentation/appsettings.json
@@ -17,7 +17,7 @@
   },
   "ConnectionStrings": {
     // SQL Server
-    "MusicDBConecnection": "Server=.;Database=MuiscDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;",
+    "ERPDBConecnection": "Server=.;Database=MuiscDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;",
     // SQLite
     //"MusicDBConecnection": "Data Source=./MusicDb.db",
 
