--- a/ERP.Application/ERP.Application.csproj
+++ b/ERP.Application/ERP.Application.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ERP.Domain\ERP.Domain.csproj" />
-    <ProjectReference Include="..\ERPShared.Common\ERP.Shared.Common.csproj" />
+    <ProjectReference Include="..\ERP.Shared.Common\ERP.Shared.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\Commands\User\Handlers\" />
