--- a/ERP.Infrastructure/ERP.Infrastructure.csproj
+++ b/ERP.Infrastructure/ERP.Infrastructure.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ERP.Application\ERP.Application.csproj" />
+    <ProjectReference Include="..\ERP.Shared.Common\ERP.Shared.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Persistence\Models\UserManagment\" />
