--- a/ERP.Presentation/appsettings.json
+++ b/ERP.Presentation/appsettings.json
@@ -17,7 +17,9 @@
   "ConnectionStrings": {
     // SQL Server
     "ConnectionWrite": "Server=.;Database=Write_ERP_0;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;",
-    "ConnectionRead": "Server=.;Database=Read_ERP_0;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;",
+    //mongodb
+    "ConnectionRead": "mongodb://127.0.0.1:27017/",
+    "ReadDatabaseName" : "ERP"
     //"HangfireConnection": "",
     //"Redis": "0.0.0.0:6379"
   },
