--- a/ERP.Infrastructure/ERP.Infrastructure.csproj
+++ b/ERP.Infrastructure/ERP.Infrastructure.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\ERP.Shared.Common\ERP.Shared.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Attributes\" />
     <Folder Include="Persistence\Models\UserManagment\" />
     <Folder Include="EventHandlers\" />
     <Folder Include="Email\" />
